main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
    region = "us-east-1"
}

data "aws_ssm_parameter" "amzn2_linux" {
    name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

resource "aws_vpc" "app" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true
}

resource "aws_internet_gateway" "app" {
    vpc_id = aws_vpc.app.id
}

resource "aws_subnet" "public_subnet" {
  cidr_block = "10.0.0.0/24"
  vpc_id = aws_vpc.app.id
  map_public_ip_on_launch = true
}

resource "aws_route_table" "app" {
   vpc_id = aws_vpc.app.id

   route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.app.id
   }
}

resource "aws_route_table_association" "app_subnet1" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.app.id
}

resource "aws_security_group" "nginx_sg" {
    name = "nginx_sg"
    vpc_id = aws_vpc.app.id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_instance" "nginx1" {
    ami = nonsensitive(data.aws_ssm_parameter.amzn2_linux.value)
    subnet_id = aws_subnet.public_subnet.id
    instance_type = "t2.micro"
    vpc_security_group_ids = [aws_security_group.nginx_sg.id]

    user_data = <<EOF
#! /bin/bash
sudo amazon-linux-extras install -y nginx1
sudo service nginx start
sudo rm /usr/share/nginx/html/index.html
echo '<html><head><title>Taco Team Server</title></head><body style=\"background-color:#1F778D\"><p style=\"text-align: center;\"><span style=\"color:#FFFFFF;\"><span style=\"font-size:28px;\">You did it! Have a &#127790;</span></span></p></body></html>' | sudo tee /usr/share/nginx/html/index.html
EOF
}
